# bulka_play_2

./: .env.example  .gitignore  data.json  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  manage.py  pyproject.toml  requirements.txt  robots.txt  yandex_1c81a62e57476fa0.html
.github/workflows/: deploy.yml
bulka_play_2/: asgi.py  pyproject.toml  settings.py  urls.py  wsgi.py
core/: admin.py  models.py  signals.py  sitemaps.py  views.py
core/migrations/: 0001_initial.py  0002_alter_gamekititem_options_gamekititem_description_and_more.py  0003_alter_gamekititem_options_and_more.py  0004_alter_gamekititem_options_and_more.py  0005_orderedgamekititem.py  0006_order_delivery_address_order_engraving.py  0007_discount.py  0008_arenda_time.py  0009_alter_arenda_time.py  0010_arenda_card_style.py  0011_arenda_is_specific_game.py  0012_arenda_specific_game.py  0013_gamekititemadditional_and_more.py  0014_alter_gamekititemadditional_options_and_more.py  0015_additionalproducts_material.py  0016_additionalproducts_button_text_type.py  0017_additionalproducts_price_prefix.py  0018_alter_additionalproducts_price_prefix.py  0019_additionalproducts_material_html.py  0020_additionalproducts_description_2_html_and_more.py  0021_remove_additionalproducts_button_text_type_and_more.py  0022_discount_description.py  0023_badge.py  0024_delete_badge.py  0025_additionalproducts_is_in_stock_and_more.py  0026_ordercooldown.py  (+2 more)
templates/: about.html  additional_product_detail.html  base.html  game_catalog.html  landing.html  product_detail.html  rental_catalog.html  two_games_on_one_board.html
(+36 files in other folders)
