[tool.poetry]
name = "bulka-play-2"
version = "0.1.0"
description = ""
authors = ["ToHellForever <dim.anosoff2018@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
django = ">=5.2.8,<6.0.0"
python-dotenv = ">=1.2.1,<2.0.0"
django-debug-toolbar = ">=6.1.0,<7.0.0"
pillow = ">=12.0.0,<13.0.0"
python-telegram-bot = ">=22.5,<23.0"
django-ordered-model = ">=3.7.4,<4.0.0"
django-admin-sortable2 = ">=2.2.8,<3.0.0"
whitenoise = ">=6.11.0,<7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"